Fix spacing between buttons (#631)

--- a/resources/assets/sass/custom/_app.scss
+++ b/resources/assets/sass/custom/_app.scss
@@ -178,6 +178,10 @@ code {
   display: none !important;
 }
 
+.btn-cloud .btn {
+  margin: 2px;
+}
+
 .link-thumbnail {
   box-shadow: inset 0 0 1px $secondary;
   display: flex;
